components/base/bng/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bng
  labels:
    app: bng
spec:
  ports:
    - name: api
      port: 8080
      targetPort: 8080
    - name: metrics
      port: 9090
      targetPort: 9090
  selector:
    app: bng
